Grid gutter achieved using correct 'grid-gap' property

--- a/src/components/utility/Grid/Grid.module.scss
+++ b/src/components/utility/Grid/Grid.module.scss
@@ -11,11 +11,20 @@ $grid-column-number: 12 !default;
 $grid-column-gap: 80px !default;
 
 .grid {
-  margin-left: -(rem-calc($grid-column-gap));
+  margin-left: -(rem-calc($grid-gap));
   @include gridWithFallback;
 
   .gridItem {
-    padding-left: rem-calc($grid-column-gap);
+    padding-left: rem-calc($grid-gap);
+  }
+
+  @supports (display: grid) {
+    grid-gap: $grid-gap;
+    margin-left: 0;
+
+    .gridItem {
+      padding-left: 0;
+    }
   }
 }
 
